fixing overflow on nav

--- a/src/output.css
+++ b/src/output.css
@@ -622,6 +622,21 @@ video {
   margin-bottom: 15rem;
 }
 
+.my-56{
+  margin-top: 14rem;
+  margin-bottom: 14rem;
+}
+
+.my-52{
+  margin-top: 13rem;
+  margin-bottom: 13rem;
+}
+
+.my-48{
+  margin-top: 12rem;
+  margin-bottom: 12rem;
+}
+
 .mb-6{
   margin-bottom: 1.5rem;
 }
